--- a/themes/kmom02/scss/footer.scss
+++ b/themes/kmom02/scss/footer.scss
@@ -10,10 +10,10 @@
     .social {
         font-size: 3.3rem;
         text-align: center;
+    }
 
-        a {
-            text-decoration: none;
-        }
+    .social a {
+        text-decoration: none;
     }
     
     .foottext {
