--- a/themes/kmom02/scss/general.scss
+++ b/themes/kmom02/scss/general.scss
@@ -24,17 +24,23 @@ body {
     height: 100%;
 }
 
+html {
+    font-size: 100%;
+}
+
 
 /* Placement */
 
 body {
     display: flex;
     flex-direction: column;
+    font-family: $font-body;
 }
 
 .main {
     flex: 1 0 auto;
-    max-width: 700px;
+    // max-width: 700px;
+    max-width: 50rem;
     margin: auto;
 }
 
@@ -45,9 +51,6 @@ body {
 
 /* Typografy */
 
-body {
-    font-family: $font-body;
-}
 
 p,
 td,
@@ -58,6 +61,7 @@ dd {
     overflow-wrap: break-word;
     word-wrap: break-word;
     line-height: 1.4rem;
+    font-size: 1em;
 }
 
 .main p {
