--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -7,6 +7,7 @@
 @import 'header';
 @import 'footer';
 @import 'general';
+@import 'technology';
 
 @import '../../shared/fontawesome/scss/fontawesome';
 $fa-font-path: '../../shared/fontawesome/webfonts';
