--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -1,5 +1,5 @@
 $font-color: #444;
-$font-alternative-color: #fff;
+$font-alternative-color: rgb(255, 149, 0);
 $accent-color: rgb(183, 224, 238);
 $accent-alternative-color: rgb(232, 231, 231);
 $background-color: #fff;
