--- a/themes/kmom02/css/style.css
+++ b/themes/kmom02/css/style.css
@@ -372,10 +372,9 @@ pre code {
 }
 
 /* Header */
-.header,
 .site-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: left;
 }
 
 .header {
@@ -385,10 +384,24 @@ pre code {
 .header a {
   text-decoration: none;
 }
+.header a:hover {
+  color: rgb(255, 149, 0);
+}
 
 .nav {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-family: "Architects Daughter", sans-serif;
+  display: inline-block;
+  width: 100%;
+}
+
+.nav ul {
+  list-style-type: none;
+  text-align: center;
+}
+
+.nav li {
+  display: inline;
 }
 
 .logo img {
@@ -491,13 +504,128 @@ h6 {
   font-family: "Architects Daughter", sans-serif;
 }
 
-img {
-  max-width: 100%;
-}
-
 .kattklass {
   float: left;
   padding: 2rem;
+  max-width: 100%;
+}
+
+.bildklass {
+  max-width: 100%;
+}
+
+/*
+* TECHNOLOGIES
+*/
+.tech {
+  margin: 5rem;
+  margin-top: 0.5rem;
+}
+
+.landingpage {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 70px 200px 200px 200px 200px;
+  gap: 1em 1em;
+}
+
+.landingpage h1 {
+  grid-column: 1/4;
+  justify-self: center;
+}
+
+.tech-box {
+  padding: 0;
+  overflow: hidden;
+  position: relative;
+}
+.tech-box h3 {
+  font-size: 3rem;
+  padding: 2rem;
+}
+.tech-box a {
+  text-decoration: none;
+  font-size: 3rem;
+}
+
+.tech-box p {
+  text-align: left;
+}
+
+.css {
+  grid-column: 3/4;
+  grid-row: 2/3;
+  background-color: lavender;
+}
+
+.html {
+  grid-column: 1/3;
+  grid-row: 2/3;
+  background-color: rgb(255, 249, 220);
+}
+
+.php {
+  grid-column: 1/2;
+  grid-row: 3/5;
+  background-color: rgb(223, 245, 223);
+}
+
+.java {
+  grid-column: 2/4;
+  grid-row: 3/4;
+  background-color: lavenderblush;
+}
+
+.git {
+  grid-column: 2/3;
+  grid-row: 4/5;
+  background-color: rgb(226, 253, 248);
+}
+
+.sql {
+  grid-column: 1/3;
+  grid-row: 5/6;
+  background-color: rgb(230, 229, 229);
+}
+
+.python {
+  grid-column: 3/4;
+  grid-row: 4/6;
+  background-color: rgb(222, 239, 251);
+}
+
+/*
+* TECHNOLOGY
+*/
+.tech2 {
+  margin: 4rem;
+  margin-left: 6rem;
+  margin-top: 0.5rem;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 3em;
+  flex: 1 0 auto;
+}
+
+.tech-nav {
+  padding: 1rem 1rem 1rem;
+}
+
+.tech-nav ul {
+  list-style-type: none;
+}
+
+.tech-nav li a {
+  display: block;
+  text-decoration: none;
+  padding: 0.7rem;
+  font-family: "Architects Daughter", sans-serif;
+  color: rgb(255, 149, 0);
+  font-size: 2rem;
+}
+
+.tech-nav li a:hover {
+  background-color: lightgoldenrodyellow;
 }
 
 /*!
@@ -6622,12 +6750,6 @@ readers do not read off random characters that represent icons */
   transition: height 0.5s ease-in !important;
 }
 
-.nav ul {
-  display: flex;
-  justify-content: flex-end;
-  list-style: none;
-}
-
 .nav ul li {
   padding: 0 1em;
 }
@@ -6676,5 +6798,53 @@ readers do not read off random characters that represent icons */
 @media (min-width: 64em) {
   html {
     font-size: 112.5%;
+  }
+}
+@media (max-width: 700px) {
+  .tech {
+    margin: 2rem;
+  }
+  .landingpage {
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    gap: 0;
+    row-gap: 1em;
+  }
+  .landingpage h1 {
+    grid-column: 1/2;
+    justify-self: center;
+  }
+  .tech-box {
+    grid-column: 1/2;
+  }
+  .html {
+    grid-row: 2/3;
+  }
+  .css {
+    grid-row: 3/4;
+  }
+  .php {
+    grid-row: 4/5;
+  }
+  .java {
+    grid-row: 5/6;
+  }
+  .git {
+    grid-row: 6/7;
+  }
+  .sql {
+    grid-row: 7/8;
+  }
+  .python {
+    grid-row: 8/9;
+  }
+}
+@media (max-width: 767px) {
+  .tech-bar {
+    display: none;
+  }
+  .tech2 {
+    grid-template-columns: auto;
+    margin: 2rem;
   }
 }
