--- a/themes/kmom02/scss/technology.scss
+++ b/themes/kmom02/scss/technology.scss
@@ -47,7 +47,7 @@
 .css {
     grid-column: 3 / 4;
     grid-row: 2 / 3;
-    background-color: lavender;
+    background-color: rgb(230, 230, 250);
 }
 
 .html {
@@ -65,7 +65,7 @@
 .java {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
-    background-color: lavenderblush;
+    background-color: rgb(255, 240, 245);
 }
 
 .git {
@@ -77,7 +77,7 @@
 .sql {
     grid-column: 1 / 3;
     grid-row: 5 / 6;
-    background-color: rgb(230, 229, 229)
+    background-color: rgb(230, 229, 229);
 }
 
 .python {
@@ -101,7 +101,7 @@
 }
 
 .tech-nav {
-    padding: 1rem 1rem 1rem;
+    padding: 1rem;
 }
 
 .tech-nav ul {
@@ -118,5 +118,5 @@
 }
 
 .tech-nav li a:hover {
-    background-color: lightgoldenrodyellow;
+    background-color: rgb(250, 250, 210);
 }
