--- a/themes/kmom02/scss/style-dark.scss
+++ b/themes/kmom02/scss/style-dark.scss
@@ -1,5 +1,5 @@
 @import '../../node_modules/normalize.css/normalize';
-@import 'variables';
+@import 'variables-dark';
 
 @import 'blockquotes';
 @import 'code';
@@ -18,3 +18,5 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Grape+Nuts&display=swap');
 
 @import 'mobile';
+
+
