--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -1,8 +1,32 @@
+$color-one: #8bc1b5;
+$color-two: #49756c;
+$color-three: #c09fc2;
+$color-four: #c2b078;
+$color-five: #756c4f;
+
+
+
 $font-color: #444;
-$font-alternative-color: rgb(255, 149, 0);
-$accent-color: rgb(183, 224, 238);
-$accent-alternative-color: rgb(232, 231, 231);
-$background-color: #fff;
-$background-alternative-color: #e0fbfc;
+$font-alternative-color: #49756c;
+$font-for-code: #444;
+
+$accent-color: #8bc1b5;
+$accent-alternative-color: #976d9a;
+$accent-alternative-color2: #c2b078;
+$accent-alternative-color3: #756c4f;
+
+$header-font-color: #365f56;
+$footer-font-color: #78517a;
+$header-background: #8bc1b5;
+$footer-background: #f0ece4;
+$main-background: #fff;
+$hover-font: #fff;
+$filter-image: none;
+
+$side-nav-hover-font: #fff;
+$side-nav-hover-back: #78517a;
+
+$background-color: #f0ece4;
+$background-alternative-color: rgb(225, 228, 228);
 $font-header: 'Architects Daughter', sans-serif;
 $font-body: sans-serif;
