--- a/themes/kmom02/incl/header.twig
+++ b/themes/kmom02/incl/header.twig
@@ -15,5 +15,13 @@
     {% endif %}
 
     <link rel="icon" href="{{ theme_url }}/../shared/img/favicon.ico">
-    <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+
+
+    {# <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" /> #}
+
+    {% if config.session.theme == "dark" %}
+        <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.min.css" type="text/css" />
+    {% else %}
+        <link rel="stylesheet" href="{{ theme_url }}/css/style.min.css" type="text/css" />
+    {% endif %}
 </head>
