--- a/themes/kmom02/scss/technology.scss
+++ b/themes/kmom02/scss/technology.scss
@@ -23,6 +23,9 @@
     padding: 0;
     overflow: hidden;
     position: relative;
+    background-color: $main-background;
+    border: 2px dashed $font-color;
+    border-radius: 255px 15px 255px 15px/15px 255px 15px 255px;
 
     h3 {
         font-size: 3rem;
@@ -47,43 +50,44 @@
 .css {
     grid-column: 3 / 4;
     grid-row: 2 / 3;
-    background-color: rgb(230, 230, 250);
+    // background-color: rgb(230, 230, 250);
+    transform: rotate(4deg);
 }
 
 .html {
     grid-column: 1 / 3;
     grid-row: 2 / 3;
-    background-color: rgb(255, 249, 220);
+    // background-color: rgb(255, 249, 220);
 }
 
 .php {
     grid-column: 1 / 2;
     grid-row: 3 / 5;
-    background-color: rgb(223, 245, 223);
+    // background-color: rgb(223, 245, 223);
 }
 
 .java {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
-    background-color: rgb(255, 240, 245);
+    // background-color: rgb(255, 240, 245);
 }
 
 .git {
     grid-column: 2 / 3;
     grid-row: 4 / 5;
-    background-color: rgb(226, 253, 248);
+    // background-color: rgb(226, 253, 248);
 }
 
 .sql {
     grid-column: 1 / 3;
     grid-row: 5 / 6;
-    background-color: rgb(230, 229, 229);
+    // background-color: rgb(230, 229, 229);
 }
 
 .python {
     grid-column: 3 / 4;
     grid-row: 4 / 6;
-    background-color: rgb(222, 239, 251);
+    // background-color: rgb(222, 239, 251);
 }
 
 /*
@@ -118,5 +122,6 @@
 }
 
 .tech-nav li a:hover {
-    background-color: rgb(250, 250, 210);
+    background-color: $side-nav-hover-back;
+    color: $side-nav-hover-font;
 }
