--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -11,7 +11,7 @@ $font-alternative-color: #49756c;
 $font-for-code: #444;
 
 $accent-color: #8bc1b5;
-$accent-alternative-color: #976d9a;
+$accent-alternative-color: #78517a;
 $accent-alternative-color2: #c2b078;
 $accent-alternative-color3: #756c4f;
 
