--- a/themes/kmom02/scss/mobile.scss
+++ b/themes/kmom02/scss/mobile.scss
@@ -172,3 +172,31 @@
         grid-row: 4 / 5;
     }
 }
+
+
+@media (max-width: 1200px) {
+    .gallery-land {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .gallery-land h1 {
+        grid-column: 1 / 3;
+    }
+}
+
+@media (max-width: 799px) {
+    .polar {
+        width: 300px;
+        height: 340px;
+    }
+}
+
+@media (max-width: 655px) {
+    .gallery-land {
+        grid-template-columns: 1fr;
+    }
+
+    .gallery-land h1 {
+        grid-column: 1 / 2;
+    }
+}
