--- a/themes/kmom02/scss/style-dark.scss
+++ b/themes/kmom02/scss/style-dark.scss
@@ -9,6 +9,7 @@
 @import 'general';
 @import 'technology';
 @import 'analysis';
+@import 'gallery';
 
 @import '../../shared/fontawesome/scss/fontawesome';
 $fa-font-path: '../../shared/fontawesome/webfonts';
