--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -20,10 +20,10 @@ $footer-font-color: #78517a;
 $header-background: #8bc1b5;
 $footer-background: #f0ece4;
 $main-background: #fff;
-$hover-font: #fff;
+$hover-font: #f0ece4;
 $filter-image: none;
 
-$side-nav-hover-font: #fff;
+$side-nav-hover-font: #f0ece4;
 $side-nav-hover-back: #78517a;
 
 $background-color: #f0ece4;
