--- a/themes/kmom02/scss/analysis.scss
+++ b/themes/kmom02/scss/analysis.scss
@@ -189,11 +189,12 @@
 * LOAD
 */
 
-.resultsheet {
-    width: 800px;
-    height: 500px;
-    padding-bottom: 1em;
-}
+// .resultsheet {
+//     // width: 800px;
+//     max-width: 98%;
+//     height: 500px;
+//     padding-bottom: 1em;
+// }
 
 .loadtable {
     border-collapse: collapse;
@@ -210,4 +211,30 @@
 
 .colorclass {
     padding-top: 2em;
+}
+
+
+
+.framesheet {
+    position: relative;
+    padding-bottom: 500px;
+    height: 0;
+    overflow: hidden;
+    max-width: 98%;
+    // height: 500px;
+}
+
+// .resultsheet {
+//     max-width: 100%;
+//     height: 500px;
+//     // margin-top: 2rem;
+// }
+
+
+.resultsheet {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
