--- a/themes/kmom02/scss/header.scss
+++ b/themes/kmom02/scss/header.scss
@@ -39,6 +39,9 @@
     background-color: $header-background;
     padding: 2em 2em 1em 3em;
     color: $font-color;
+    border-bottom: 2px dashed $font-color;
+    border-radius: 0 15px 2px 105px/0 0 255px 2px;
+    box-shadow: 8px 8px 5px 0 rgba(0, 0, 0, 0.14);
 
     a {
         text-decoration: none;
