--- a/themes/kmom02/scss/gallery.scss
+++ b/themes/kmom02/scss/gallery.scss
@@ -27,12 +27,15 @@
     display: flex;
     justify-content: center;
     padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
     box-shadow: 8px 8px 5px 0 rgba(0, 0, 0, 0.14);
 }
 
 .polar img {
-    border-top: 1px solid #444;
-    border-left: 1px solid #444;
+    border-top: 1.6px solid rgba(0, 0, 0, 0.8);
+    border-left: 1.6px solid rgba(0, 0, 0, 0.8);
+    border-radius: 2px 0;
 }
 
 .polar-text {
