--- a/themes/kmom02/scss/general.scss
+++ b/themes/kmom02/scss/general.scss
@@ -51,6 +51,20 @@ body {
     border: 2px dashed $font-color;
     border-radius: 155px 15px 155px 15px/15px 155px 15px 155px;
     padding: 2rem;
+    box-shadow: 8px 8px 5px 0 rgba(0, 0, 0, 0.14);
+    transform: rotate(2deg);
+}
+
+.main2 {
+    flex: 1 0 auto;
+    // max-width: 700px;
+    max-width: 50rem;
+    margin: 2rem auto;
+    background-color: $main-background;
+    border: 2px dashed $font-color;
+    border-radius: 155px 15px 155px 15px/15px 155px 15px 155px;
+    padding: 2rem;
+    box-shadow: 8px 8px 5px 0 rgba(0, 0, 0, 0.14);
 }
 
 .header,
@@ -98,8 +112,4 @@ h6 {
 .bildklass {
     max-width: 100%;
     filter: $filter-image;
-}
-
-.colorclass {
-    max-width: 100%;
 }
