--- a/themes/kmom02/scss/technology.scss
+++ b/themes/kmom02/scss/technology.scss
@@ -26,8 +26,9 @@
     background-color: $main-background;
     border: 2px dashed $font-color;
     border-radius: 255px 15px 255px 15px/15px 255px 15px 255px;
+    box-shadow: 8px 8px 5px 0 rgba(0, 0, 0, 0.14);
 
-    h3 {
+    h2 {
         font-size: 3rem;
         // background-color: rgba(255, 255, 255, 0.3);
         padding: 2rem;
@@ -63,6 +64,7 @@
 .php {
     grid-column: 1 / 2;
     grid-row: 3 / 5;
+    transform: rotate(-3deg);
     // background-color: rgb(223, 245, 223);
 }
 
@@ -75,6 +77,7 @@
 .git {
     grid-column: 2 / 3;
     grid-row: 4 / 5;
+    transform: rotate(3deg);
     // background-color: rgb(226, 253, 248);
 }
 
@@ -102,6 +105,15 @@
     grid-template-columns: 2fr 1fr;
     gap: 3em;
     flex: 1 0 auto;
+}
+
+.technology {
+    margin: 2rem auto;
+    background-color: $main-background;
+    padding: 2rem;
+    border: 2px dashed $font-color;
+    border-radius: 255px 15px 255px 15px/15px 255px 15px 255px;
+    box-shadow: 8px 8px 5px 0 rgba(0, 0, 0, 0.14);
 }
 
 .tech-nav {
