--- a/themes/kmom02/scss/analysis.scss
+++ b/themes/kmom02/scss/analysis.scss
@@ -39,14 +39,12 @@
     grid-column: 1 / 2;
     position: relative;
     box-shadow: 8px 8px 5px 0 rgba(0, 0, 0, 0.14);
-
 }
 
 .kmom05 {
     grid-column: 2 / 3;
     position: relative;
     box-shadow: 8px 8px 5px 0 rgba(0, 0, 0, 0.14);
-
 }
 
 .kmom06 {
@@ -54,7 +52,18 @@
     grid-column: 3 / 4;
     position: relative;
     box-shadow: 8px 8px 5px 0 rgba(0, 0, 0, 0.14);
+}
 
+.kmom10 {
+    grid-column: 1 / 2;
+    position: relative;
+    box-shadow: 8px 8px 5px 0 rgba(0, 0, 0, 0.14);
+}
+
+.kmom11 {
+    grid-column: 2 / 3;
+    position: relative;
+    box-shadow: 8px 8px 5px 0 rgba(0, 0, 0, 0.14);
 }
 
 .linkspanner04 {
@@ -243,4 +252,22 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+
+.framesheet2 {
+    position: relative;
+    padding-bottom: 350px;
+    height: 0;
+    overflow: hidden;
+    max-width: 98%;
+    margin-bottom: 1rem;
+}
+
+.kmom li {
+    margin-left: 2rem;
+}
+
+.kmom ul {
+    padding-bottom: 1rem;
 }
